<resources>
    <string name="app_name" translatable="false">goBike</string>
    <string name="btnGo" translatable="false">GO</string>
    <string name="desc_login">Botão Login</string>
    <string name="desc_cartao">Botão de Pagamento</string>
    <string name="desc_conf">Botão de Configurações</string>
    <string name="desc_map">Botão Mapas</string>
    <string name="btnLogin" translatable="false">Login</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_email" translatable="false">e-mail</string>
    <string name="hint_nasc">Data de Nascimento</string>
    <string name="title_activity_maps" translatable="false">Mapa</string>
    <string name="btnSave">Salvar</string>
    <string name="hint_raio">Raio(metros)</string>
    <string name="hint_code" translatable="false">Code</string>
    <string name="btnCheck" translatable="false">Check</string>
    <string name="btnCad">Cadastrar</string>
    <string name="tv_numero">Número:</string>
    <string name="tv_nome">Nome como no cartão:</string>
    <string name="tv_cpf">CPF do titular:</string>
    <string name="tv_expire">Expira em:</string>
    <string name="tv_cvc" translatable="false">CVC</string>
    <string name="hint_expire">MM/AA</string>
    <string name="desc_clock">Imagem de relógio</string>
    <string name="btnDevolver">DEVOLVER</string>
    <string name="toastHome_reloadMyLocation">O GPS deve estar habilitado para o app funcionar corretamente.</string>
    <string name="alertItem_Logout" translatable="false">Logout</string>
    <string name="alertItem_Excluir_Conta">Excluir Conta</string>
    <string name="alertItem_Cancelar">Cancelar</string>
    <string name="toastHome_goLogin_title">Você já está logado! O que deseja fazer?</string>
    <string name="toast_Excluindo">Excluindo...</string>
    <string name="alertItem_Excluir_Cartao">Excluir Cartão</string>
    <string name="toastHome_goCard_title">Você já possui cartão cadastrado! O que deseja fazer?</string>
    <string name="toastHome_goCard_error">Você deve criar uma conta ou fazer login antes de cadastrar um cartão.
    </string>
    <string name="toastHome_doBtnGo_error">Você deve estar próximo de uma estação para conseguir entregar!</string>
    <string name="alertTitle_Atencao">Atenção</string>
    <string name="toastHome_TaskUser_erroConta">Erro ao tentar excluir conta!</string>
    <string name="toastHome_TaskUser_erroCartao">Erro ao tentar excluir cartão!</string>
    <string name="toastHome_TaskUser_contaExcluida">Conta excluida!</string>
    <string name="toastHome_TaskUser_cartaoExcluido">Cartão excluido!</string>
    <string name="toast_ErroServidor">Erro no servidor!</string>
    <string name="toastHome_TaskRent_bikeAlugada">Bike alugada com sucesso!</string>
    <string name="toastHome_TaskRent_bikeJaAlugada">Já está com uma bike alugada!</string>
    <string name="toastHome_TaskRent_bikeErroAlugar">Erro ao tentar alugar Bike!</string>
    <string name="toastHome_TaskRent_bikeDevolvida">Bike devolvida com sucesso!</string>
    <string name="toastHome_TaskRent_bikeErroDevolver">Erro ao tentar devolver a Bike!</string>
    <string name="toast_ErroPegarInfo">Erro ao tentar pegar inforação do usuário!</string>
    <string name="alertTitle_confGPS">Seu GPS está desabilitado!</string>
    <string name="alertMsg_confGPS">Você deve habilita-lo para o app funcionar corretamente.\n\nDeseja habilita-lo?
    </string>
    <string name="alertBtn_Sim">Sim</string>
    <string name="alertBtn_Nao">Não</string>
    <string name="toastCard_Ok">Cartão cadastrado com sucesso!</string>
    <string name="toastCard_Erro">Erro ao cadastrar cartão!</string>
    <string name="toastConf_Erro">Você deve digitar um valor maior que 5.</string>
    <string name="alertLogin_Confira">Confira os dados:</string>
    <string name="alertLogin_CodePreencher">Code deve ser preenchido!</string>
    <string name="toastLogin_ErroCad">Erro ao cadastrar usuário!</string>
    <string name="toastLogin_NovoCodeEmail">Novo Code enviado para seu e-mail.</string>
    <string name="msgLogin1">Você mudou o Code a</string>
    <string name="msgLogin2">minutos.</string>
    <string name="msgLogin3">Você deve aguardar</string>
    <string name="msgLogin4">minutos para gerar um novo.</string>
    <string name="msgLogin5">Verifique seu e-mail.</string>
    <string name="alertAguarde">Aguarde</string>
    <string name="toastLogin_ErroCode">Erro ao tentar configurar code!</string>
    <string name="alertCodeErrado">Code Errado!</string>
    <string name="alertMsg_NovoCode">Você gostaria de receber um Code novo no seu e-mail?</string>
    <string name="alertMsg_EntreCode">Entre com o Code enviado para seu e-mail.</string>
    <string name="toastLogin_Cadastrando">Cadastrando...</string>
    <string name="toast_Enviando">Enviando...</string>
    <string name="toast_Checando">Checando...</string>
    <string name="toastValida_ErroNome">Nome deve ser preenchido!</string>
    <string name="toastValida_ErroCPF">CPF inválido!</string>
    <string name="toastValida_ErroData">Data de Nascimento inválida!\nFormato: DD/MM/AAAA</string>
    <string name="toastValida_ErroEmail">E-mail inválido!</string>
    <string name="toastValida_ErroCartao">Cartão inválido!</string>
    <string name="toastValida_ErroExpira">Data de expiração do cartão inválida!</string>
    <string name="toastValida_ErroMes">Mês do campo \'Expira em\' inválido!</string>
    <string name="toastValida_ErroCVC">CVC deve ser preenchido!</string>
    <string name="toastHome_TaskRent_bikeErroPrice">Erro ao tentar pegar o preço!</string>
    <string name="confirmRentTitle">Confirme Aluguel</string>
    <string name="confirmRent_msg1">R$</string>
    <string name="confirmRent_msg2">" (que será cobrado agora do seu cartão) por um período de "</string>
    <string name="confirmRent_msg3">" minuto(s).\nApós isso será cobrado R$ "</string>
    <string name="confirmRent_msg4">" a cada "</string>
    <string name="confirmRent_msg5">" minuto(s) (que será cobrado do seu cartão após a devolução)."</string>
    <string name="confirmRent_msg0">Os valores cobrados são:\n</string>
    <string name="hint_tel">Telefone</string>
    <string name="toastValida_ErroTel">Telefone inválido.\nFormato: (+DDI) DDD XXXXX-XXXX</string>
    <string name="toastHome_TaskRent_bikeErroStatus">Erro ao tentar pegar Status!</string>
    <string name="alertMsg_EntreCVC">"Você deve entrar com o código CVC do cartão terminado em "</string>
    <string name="status_created">Pagamento Criado...</string>
    <string name="status_waiting">Aguardando Pagamento...</string>
    <string name="status_not_paid">Pagamento não autorizado!</string>
    <string name="btnCancel">CANCELAR</string>
    <string name="alertCost">Pegando Valores...</string>
</resources>
