<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_login"
        android:onClick="goLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user1" />

    <ImageView
        android:id="@+id/iv_card"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_cartao"
        android:onClick="goCard"
        app:layout_constraintEnd_toEndOf="@+id/go"
        app:layout_constraintStart_toEndOf="@+id/iv_login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/creditcard1" />

    <ImageView
        android:id="@+id/iv_conf"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_conf"
        android:onClick="goConf"
        app:layout_constraintEnd_toStartOf="@+id/iv_point"
        app:layout_constraintStart_toStartOf="@+id/go"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings2" />

    <ImageView
        android:id="@+id/iv_point"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_map"
        android:onClick="goMaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/point1" />

    <Button
        android:id="@+id/go"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round_black"
        android:onClick="doBtnGo"
        android:text="@string/btnGo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_login"
        app:layout_constraintStart_toStartOf="@+id/iv_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />

    <TextView
        android:id="@+id/tv_card"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_card"
        app:layout_constraintStart_toStartOf="@+id/iv_card"
        app:layout_constraintTop_toBottomOf="@+id/iv_card" />

    <ImageView
        android:id="@+id/iv_clock"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_clock"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_clock"
        app:layout_constraintTop_toTopOf="@+id/iv_clock" />

</android.support.constraint.ConstraintLayout>